--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -1,235 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Work Orders</title>
-    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <style>
-        .center-align {
-            text-align: center;
-        }
+{% extends 'bases/base.html' %}
+{% load crispy_forms_tags %}
+{% load static %}
+{% load i18n %}
+{% block head %}
 
-        .left-align {
-            text-align: left;
-        }
+{% endblock %}
+{% block title %}
+MES Tool
+{% endblock title %}
+{% block breadcrumb %}
 
-        #mainGrid tbody tr {
-            cursor: pointer;
-        }
+{% endblock %}
 
-        .modal-xl-custom {
-            max-width: 95%; /* 根据需要调整宽度 */
-        }
-        .modal-content-custom {
-            height: 90vh; /* 根据需要调整高度 */
-        }
-    </style>
-</head>
-<body>
-    <div id="jsGrid"></div>
-    <!-- Modal -->
-    <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-xl modal-xl-custom">
-        <div class="modal-content modal-content-custom">
-          <div class="modal-header">
-            <h5 class="modal-title" id="detailModalLabel">Detail Grid</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div id="detailGrid"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+{% block base_js %}
 
-    <!-- Log Modal -->
-    <div class="modal fade" id="logGridModal" tabindex="-1" aria-labelledby="logGridModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-xl modal-xl-custom">
-        <div class="modal-content modal-content-custom">
-          <div class="modal-header">
-            <h5 class="modal-title" id="logGridModalLabel">Log Grid</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div id="logGrid"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+{% endblock %}
 
-    <script type="text/javascript">
-        $(function() {
-            $("#jsGrid").jsGrid({
-                width: "100%",
-                height: "650px",
+{% block ready %}
 
-                inserting: false,
-                editing: false,
-                sorting: true,
-                paging: true,
-                filtering: true,
+{% endblock ready %}
 
-                autoload: true,
-                pageSize: 50,
-                pageButtonCount: 5,
+{% block container %}
 
-                deleteConfirm: "Do you really want to delete the client?",
-                rowClick: function(args) {
-                    var item = args.item;
-                    var event = args.event;
 
-                    var $td = $(event.target).closest("td");
-                    var columnIndex = $td.index();
-                    var columnName = this.fields[columnIndex].name;
-                    if (columnName === "CreationTime") {
-                        loadDetailGrid(item.Id);
-                    }
-                },
-                controller: {
-                    loadData: function(filter) {
-                        return $.ajax({
-                            type: "GET",
-                            url: "{% url 'work_order_list' %}",
-                            data: filter,
-                            dataType: "json"
-                        }).then(function(data) {
-                            if (filter.RunCardId) {
-                                data = $.grep(data, function(item) {
-                                    return item.RunCardId.toLowerCase().indexOf(filter.RunCardId.toLowerCase()) !== -1;
-                                });
-                            }
-                            if (filter.InspectionDate) {
-                                data = $.grep(data, function(item) {
-                                    return item.InspectionDate.toLowerCase().indexOf(filter.InspectionDate.toLowerCase()) !== -1;
-                                });
-                            }
-                            if (filter.Period) {
-                                data = $.grep(data, function(item) {
-                                    return item.Period.toLowerCase().indexOf(filter.Period.toLowerCase()) !== -1;
-                                });
-                            }
-                            return data;
-                        });
-                    }
-                },
-
-                fields: [
-                    { name: "InspectionDate", type: "text", width: 50, title: "InspectionDate", autosearch: true, css: "center-align" },
-                    { name: "WorkOrderId", type: "text", width: 60, title: "WorkOrderId", autosearch: true, css: "center-align" },
-                    { name: "Period", type: "text", width: 30, title: "Period", autosearch: true, css: "center-align" },
-                    { name: "Id", type: "text", width: 50, title: "RunCard", autosearch: true, css: "center-align" },
-                    { name: "WorkCenterTypeName", type: "text", width: 30, title: "Plant", autosearch: true, css: "center-align" },
-                    { name: "MachineName", type: "text", width: 70, title: "MachineName", autosearch: true },
-                    { name: "LineName", type: "text", width: 40, title: "LineName", autosearch: true, css: "center-align" },
-                    { name: "ProductItem", type: "text", width: 100, title: "ProductItem", autosearch: true },
-                    { name: "CustomerCode", type: "text", width: 40, title: "C. Code", autosearch: true },
-                    { name: "CustomerName", type: "text", width: 70, title: "C. Name", autosearch: true },
-                    { name: "CustomerPartNo", type: "text", width: 70, title: "CustomerPartNo", autosearch: true, css: "center-align" },
-                    { name: "AQL", type: "text", width: 30, title: "AQL", autosearch: true, css: "center-align" },
-                    { name: "PlanQty", type: "text", width: 30, title: "PlanQty", autosearch: true, css: "center-align" },
-                    { name: "NormalizedUserName", type: "text", width: 30, title: "EmpId", autosearch: true, css: "center-align" },
-                    { name: "CreationTime", type: "text", width: 70, title: "CTime", autosearch: true, css: "center-align" },
-                ]
-
-            });
-
-            // 加载详细数据的函数
-            function loadDetailGrid(pk) {
-                $.ajax({
-                    url: '{% url 'runcard_detail' %}'+ '?runcard=' + pk,
-                    method: 'GET',
-                    success: function(data) {
-                        $('#detailGrid').jsGrid({
-                            width: "100%",
-                            height: "500px",
-                            autoload: true,
-                            sorting: true,
-                            paging: true,
-                            data: data,
-                            rowClick: function(args) {
-                                const item = args.item;
-                                var event = args.event;
-
-                                var $td = $(event.target).closest("td");
-                                var columnIndex = $td.index();
-                                var columnName = this.fields[columnIndex].name;
-                                if (columnName === "InspectionStatus") {
-                                    loadLogGrid(item.id, item.OptionName);
-                                }
-                            },
-                            fields: [
-                                { name: "id", type: "text", width: 50, title: "RunCard", css: "center-align" },
-                                { name: "OptionName", type: "text", width: 50, title: "OptionName", css: "center-align" },
-                                { name: "Upper_InspectionValue", type: "text", width: 50, title: "Upper", css: "center-align" },
-                                { name: "InspectionValue", type: "text", width: 50, title: "Value", css: "center-align" },
-                                { name: "Lower_InspectionValue", type: "text", width: 50, title: "Lower", css: "center-align" },
-                                { name: "InspectionStatus", type: "text", width: 50, title: "Status", css: "center-align" },
-                                { name: "Name", type: "text", width: 50, title: "Name", css: "center-align" },
-                                { name: "CreationTime", type: "text", width: 50, title: "InspectedTime", css: "center-align" }
-
-                            ]
-                        })
-                        $('#detailModal').modal('show');
-                    },
-                    error: function(xhr, status, error) {
-                        console.error("AJAX error: " + status + " - " + error);
-                    }
-                });
-            }
-
-            // 加载子 Log Grid 的函数
-            function loadLogGrid(pk, OptionName) {
-                $.ajax({
-                    url: '{% url 'runcard_ipqc_log' %}'+ '?runcard=' + pk + '&OptionName=' + OptionName,
-                    method: 'GET',
-                    success: function(data) {
-                        $('#logGrid').jsGrid({
-                            width: "100%",
-                            height: "400px",
-                            autoload: true,
-                            sorting: true,
-                            paging: true,
-                            data: data,
-                            rowClick: function(args) {
-                                var item = args.item;
-                                var event = args.event;
-
-                                var $td = $(event.target).closest("td");
-                                var columnIndex = $td.index();
-                                var columnName = this.fields[columnIndex].name;
-                                if (columnName === "CreationTime") {
-                                    loadDetailGrid(item.id);
-                                }
-                            },
-                            fields: [
-                                { name: "RunCardId", type: "text", width: 150, title: "RunCardId" },
-                                { name: "OptionName", type: "text", width: 150, title: "OptionName" },
-                                { name: "InspectionValue", type: "text", width: 150, title: "InspectionValue" },
-                                { name: "DefectCode", type: "text", width: 150, title: "DefectCode" },
-                                { name: "InspectionStatus", type: "text", width: 150, title: "InspectionStatus" },
-                                { name: "LogAction", type: "text", width: 150, title: "LogAction" },
-                                { name: "CreationTime", type: "text", width: 150, title: "CreationTime" },
-                            ]
-                        });
-                        $('#logGridModal').modal('show');
-                    },
-                    error: function(xhr, status, error) {
-                        console.error("AJAX error: " + status + " - " + error);
-                    }
-                });
-            }
-
-        });
-    </script>
-</body>
-</html>
+{% endblock %}
