--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -54,7 +54,7 @@
             <li><a href="{% url 'collection_index' %}"><i class="fas fa-cogs"></i> <span>{% trans "Key Parameter" %}</span></a></li>
             {% endif %}
             {% if user|has_group:"MES輔助工具" %}
-            <li><a href="{% url 'runcard_info' %}"><i class="fas fa-wrench"></i> <span>{% trans "MES Tools" %}</span></a></li>
+            <li><a href="{% url 'fast_check' %}"><i class="fas fa-wrench"></i> <span>{% trans "MES Tools" %}</span></a></li>
             {% endif %}
             <!--<li><a href="#home"><i class="fas fa-home"></i> <span>關鍵參數</span></a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i> <span>{% trans "Contact" %}</span></a></li>
