--- a/src/VNEDC/mes/templates/mes/base.html
+++ b/src/VNEDC/mes/templates/mes/base.html
@@ -28,6 +28,9 @@
     <a href="{% url 'runcard_info' %}" class="btn btn-warning btn">
         <i class="fas fa-wrench"></i> RunCard
     </a>
+    <a href="{% url 'file_list' %}" class="btn btn-warning btn">
+        <i class="fas fa-wrench"></i> SCADA File
+    </a>
 </div>
 <div>
 {% block content %}
