--- a/src/VNEDC/mes/templates/mes/runcard.html
+++ b/src/VNEDC/mes/templates/mes/runcard.html
@@ -131,7 +131,7 @@
                     itemTemplate: function(value, item) {
                         // Create the popup element
                         var $popup = $("<div>").addClass("popup")
-                            .text("StartDate: " + item.StartDate + "\nEndDate: " + item.EndDate);
+                            .text("StartDate: " + item.StartDate + " - EndDate: " + item.EndDate);
 
                         // Create the main element for the WorkOrderId
                         var $element = $("<div>").addClass("machine-name-hover")
